# simfile

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE.hsaudiotag.md  LICENSE.md  Pipfile  README.md  adjustoffset.py  clicktrack.py  magicstops.py  mypy.ini  patch.py  preferences.ini  pyproject.toml  resynthesize.py  setup.py  simfile.py  simfile_test.py  test_simfile.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: about-simfiles.rst  api.rst  changelog.rst  conf.py  examples.rst  index.rst  known-properties.rst  migrating.rst  reading-writing.rst  simfile.rst  sm-ssc.rst  timing-note-data.rst
resynthesis/: __init__.py  gametypes.py
scripts/: test.bat
simfile/: __init__.py  abstract.py  assets.py  base.py  common.py  convert.py  dir.py  msd.py  notes.py  simfile.py  sm.py  ssc.py  timing.py  types.py  version.py
simfile/_private/: dedent.py  extensions.py  generic.py  nativeosfs.py  ordered_dict_forwarder.py  path.py  property.py  serializable.py  tee_file.py
simfile/_private/fs/: __init__.py  fs_not_installed.py
simfile/dir/: __init__.py  fs.py
simfile/dir/_private/: nativeosfs.py
simfile/dir/tests/: test_module.py
simfile/notes/: __init__.py  count.py  group.py  timed.py  transform.py
simfile/tests/: test_assets.py  test_convert.py  test_dir.py  test_module.py  test_notes.py  test_simfile.py  test_sm.py  test_ssc.py  test_timing.py
simfile/timing/: __init__.py  displaybpm.py  engine.py
src/simfile/: __init__.py  assets.py  base.py  convert.py  dir.py  sm.py  ssc.py  types.py
synctools/: __init__.py  simfile.py  utils.py
synthesis/: __init__.py  gametypes-old.py
testdata/: Kryptix.sm  L9.ssc  Robotix.sm  Tribal Style.sm  comments.sm  duplicates.sm  multivalue.sm  no semicolon.sm  unicode.sm
testdata/Backup/: backup.sm  backup.ssc
testdata/Springtime/: Springtime.ssc
testdata/Y.E.A.H/: Y.E.A.H.sm  Y.E.A.H.ssc
testdata/nekonabe/: nekonabe.sm
testdata/spin_cycle/: spin_cycle.ssc
tests/: test_assets.py  test_convert.py  test_dir.py  test_module.py  test_sm.py  test_ssc.py
tests/helpers/: fake_simfile.py  test_fake_simfile.py
tests/notes/: helpers.py  test_count.py  test_group.py  test_module.py  test_timed.py
tests/timing/: helpers.py  test_displaybpm.py  test_engine.py  test_module.py
utils/: simfile.py  synctools.py
(+28 files in other folders)
