[project]
name = "simfile"
version = "3.0.0a1"
description = "Simfile parsing & editing library"
authors = [
    { name = "Ash Garcia", email = "github@garcia.sh" }
]
license = { file = "LICENSE.md" }
readme = "README.md"
dependencies = [
    "msdparser~=3.0.0a2",
    "pyfakefs==4.5.6",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["stepmania", "simfile", "sm", "ssc"]
requires-python = ">= 3.10"

[project.optional-dependencies]
fs = ["fs"]
assets = ["pillow"]
all = ["fs", "pillow"]

[tool.rye]
dev-dependencies = [
    "pytest>=8.3.2",
    "sphinx>=8.0.2",
    "sphinx-rtd-theme~=3.0.0rc1",
    "sphinx-autoapi>=3.2.1",
    "black>=24.8.0",
    "pytest-subtests>=0.13.1",
]
